--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.Search{
+.search{
     border-radius: 6px;
     color: black;
     border: solid;
@@ -6,40 +6,39 @@
     height: 60px;
     width: 200px;
 }
-.sign{
+.sign-up{
     border-radius: 2px;
     color: white;
-    
-    
-
     
 }
 .navbar{
     display: flex;
     justify-content: space-around;
 }
-.learn{
+.input-field{
     border: 2px;
     width: 200px;
     color: black;
     background-color: white;
-    border-radius: 3px;
+    border-radius: 6px;
+    height: 50px;
 }
-.are{
+.body-text{
     font-size: 80px;
 }
 
-.Study{
+.body{
     display: flex;
     justify-content: space-around;
 }
 #container{
-    background-color: rgb(207, 105, 156);
-    border-radius: 20px;
-    border: 2px solid black;
 
+    
+    border: 3px solid black;
+border-radius: 6px;
+      background-color:palevioletred;
 }
-.numbers{
+.footer{
     display: flex;
     justify-content: space-around;
     border-radius: 20px;
@@ -55,13 +54,71 @@ button{
 .baims{
     font-size: 25px;
 }
-.backs{
-    background-color: blue;
-    padding: 50px;
-    border-radius: 10px;
+.search i{
+    position: absolute;
+    margin:4px;
 }
-@media screen and (min-width: 480px){
-    .Search{
+
+@media screen and (min-width: 480px)and (max-width: 600px) {
+    .search{
+        border-radius: 6px;
+        color: black;
+        border: solid;
+        background-color: white;
+        height: 60px;
+        width: 100px;
+    }
+    .sign-up{
+        border-radius: 2px;
+        color: white;
+        
+    }
+    .navbar{
+        display: flex;
+        justify-content: space-around;
+    }
+    .input-field{
+        border: 2px;
+        width: 100px;
+        color: black;
+        background-color: white;
+        border-radius: 6px;
+        height: 40px;
+    }
+    .body-text{
+        font-size: 80px;
+    }
+    
+    .body{
+        display: flex;
+        justify-content: space-around;
+    }
+    #container{
+    
+        
+        border: 2px solid black;
+    
+          background-color:palevioletred;
+    }
+    .footer{
+        display: flex;
+        justify-content: space-around;
+        border-radius: 10px;
+        background-color: lightgoldenrodyellow;
+        height: 100px;
+    }
+    button{
+        background-color: black;
+        color: white;
+        height: 40px;
+        width: 60px;
+    }
+    .baims{
+        font-size: 15px;
+    }
+}
+@media screen and (min-width: 780px) and (min-width: 1024){
+    .search{
         border-radius: 6px;
         color: black;
         border: solid;
@@ -69,40 +126,39 @@ button{
         height: 60px;
         width: 200px;
     }
-    .sign{
+    .sign-up{
         border-radius: 2px;
         color: white;
-        
-        
-    
         
     }
     .navbar{
         display: flex;
         justify-content: space-around;
     }
-    .learn{
+    .input-field{
         border: 2px;
         width: 200px;
         color: black;
         background-color: white;
-        border-radius: 3px;
+        border-radius: 6px;
+        height: 50px;
     }
-    .are{
+    .body-text{
         font-size: 80px;
     }
     
-    .Study{
+    .body{
         display: flex;
         justify-content: space-around;
     }
     #container{
-        background-color: rgb(207, 105, 156);
-        border-radius: 20px;
+    
+        
         border: 2px solid black;
     
+          background-color:palevioletred;
     }
-    .numbers{
+    .footer{
         display: flex;
         justify-content: space-around;
         border-radius: 20px;
@@ -118,15 +174,8 @@ button{
     .baims{
         font-size: 25px;
     }
-    .backs{
-        background-color: blue;
-        padding: 50px;
-        border-radius: 10px;
+    .search i{
+        position: absolute;
+        margin:4px;
     }
-    
-    
-    
-    
-
 }
-
